deployments/infra/certs/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: nullcloud-io-tls # This should match the Certificate secretName
    hosts:
    - nullcloud.io # This should match a DNS name in the Certificate
